Fix "other software" tiles not fitting
Proper fix might be to use flexbox.

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -490,8 +490,18 @@ fieldset[disabled] .btn-success.active {
   opacity: 0;
   display: none;
 }
-@media (max-width: 479px) {
-  h3 {
+@media (max-width: 1199px) {
+  .portfolio-item h3 {
     font-size: 18px;
+  }
+}
+@media (max-width: 991px) {
+  .portfolio-item h3 {
+    font-size: 14px;
+  }
+}
+@media (max-width: 767px) {
+  .portfolio-item h3 {
+    font-size: 16px;
   }
 }
